gitops/staging/node-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: staging
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 2
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: alexkainzinger/jku-cloud-native-node-app
          ports:
            - containerPort: 8081
